# YTVideoSummarizer-AIService

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  prompts.py  utils.py
app/api/: routes.py
app/models/: ai_result_models.py  youtube_models.py
app/tests/: test_data.py  test_routes.py  test_utils.py
