[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "pydantic>=2.11.7",
    "pytube>=15.0.0",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "youtube-transcript-api>=1.1.1",
]
